--- a/nodeapp/package.json
+++ b/nodeapp/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "babel": "^6.23.0",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "express": "^4.18.2",
     "mariadb": "^3.2.0",
     "multer": "^1.4.5-lts.1"
